--- a/MauiAppHotel/MainPage.xaml
+++ b/MauiAppHotel/MainPage.xaml
@@ -28,6 +28,7 @@
             <Button
                 x:Name="CounterBtn"
                 Text="Click me" 
+                BackgroundColor ="#FFEF580C"
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Fill" />
