--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -4,7 +4,7 @@
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
              Title="ContratacaoHospedagem"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             BackgroundColor="Black">
 
     <VerticalStackLayout VerticalOptions="CenterAndExpand"
                          Padding="10"
@@ -13,18 +13,18 @@
         <Label Text="Cálculo da Diária"
                FontFamily="Kalam"
                FontSize="50"
-               TextColor="{StaticResource Primary}" />
+               TextColor="#FFEF580C" />
 
-        <Frame Padding="10">
+        <Frame Padding="10" BackgroundColor="#2CD3D3D3">
             <VerticalStackLayout>
                 <Grid RowDefinitions="Auto, Auto"
                       ColumnDefinitions="*, *, 2*">
 
                     <Label Grid.Row="0" Grid.Column="0"
-                           Text="Adultos:" />
+                           Text="Adultos:" TextColor ="white"/>
 
                     <Label Grid.Row="0" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
+                           TextColor="#FFEF580C"
                            Text="{Binding Value}"
                            BindingContext="{x:Reference stp_adultos}"/>
 
@@ -32,13 +32,14 @@
                              x:Name="stp_adultos"
                              Minimum="0"
                              Maximum="10"
-                             Increment="1" />
+                             Increment="1" 
+                             BackgroundColor ="black"/>
 
-                    <Label Grid.Row="1" Grid.Column="0"
+                    <Label Grid.Row="1" Grid.Column="0" TextColor ="white"
                            Text="Crianças:" />
 
                     <Label Grid.Row="1" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
+                           TextColor="#FFEF580C"
                            Text="{Binding Value}"
                            BindingContext="{x:Reference stp_criancas}"/>
 
@@ -46,48 +47,51 @@
                              x:Name="stp_criancas"
                              Minimum="0"
                              Maximum="10"
-                             Increment="1" />
+                             Increment="1"
+                             BackgroundColor ="black" 
+                             />
+                             
                 </Grid>
 
-                <Frame Padding="10" Margin="10">
+                <Frame Padding="10" Margin="10" BackgroundColor="#2CD3D3D3"  >
                     <VerticalStackLayout>
 
                         <Label Text="Escolha sua Suíte"
                                TextTransform="Uppercase"
                                FontSize="Subtitle"
-                               TextColor="{StaticResource Primary}"/>
+                               TextColor="#FFEF580C"/>
 
                         <Picker x:Name="pck_quarto"
                                 Title="Selecione sua Acomodação"
-                                ItemDisplayBinding="{Binding Descricao}"/>
+                                ItemDisplayBinding="{Binding Descricao}"
+                                TextColor="White"/>
                     </VerticalStackLayout>
                 </Frame>
 
-                <Frame Padding="10"
-                       Margin="10">
+                <Frame Padding="10" Margin="10" BackgroundColor="#2CD3D3D3">
                     <VerticalStackLayout Spacing="10">
 
                         <Label Text="Período da Estadia"
                                TextTransform="Uppercase"
                                FontSize="Subtitle"
-                               TextColor="{StaticResource Primary}"/>
+                               TextColor="#FFEF580C"/>
 
                         <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                            <Label Text="Check-in:" />
+                            <Label Text="Check-in:" TextColor="White" />
                             <DatePicker x:Name="dtpck_checkin"
                                         DateSelected="dtpck_checkin_DateSelected"
-                                        Format="dd/MM/yyyy" />
+                                        Format="dd/MM/yyyy" TextColor ="white"/>
                         </HorizontalStackLayout>
 
                         <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                            <Label Text="Check-out:" />
+                            <Label Text="Check-out:" TextColor="White" />
                             <DatePicker x:Name="dtpck_checkout"
-                                        Format="dd/MM/yyyy" />
+                                        Format="dd/MM/yyyy" TextColor ="white" />
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </Frame>
 
-                <Button Text="Avançar" Clicked="Button_Clicked"   />
+                <Button Text="Avançar" Clicked="Button_Clicked"  BackgroundColor ="#FFEF580C"  />
 
             </VerticalStackLayout>
         </Frame>
