--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -3,62 +3,63 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             BackgroundColor="Black">
 
     <VerticalStackLayout VerticalOptions="CenterAndExpand">
 
         <Label Text="{Binding QuartoSelecionado.Descricao}"
-               TextColor="{StaticResource Primary}"
+               TextColor="#FFEF580C"
                FontFamily="Kalam"
                FontSize="50"
                HorizontalTextAlignment="Center"/>
 
-        <Frame Margin="10">
+        <Frame Margin="10" BackgroundColor="#2CD3D3D3">
             <StackLayout  Orientation="Horizontal" >
                 <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                    <Label Text="Adultos: " />
+                    <Label Text="Adultos: " TextColor ="white"/>
                     <Label Text="{Binding QntAdultos}" 
-                           TextColor="{StaticResource Primary}" />
+                           TextColor="#FFEF580C" />
                 </HorizontalStackLayout>
 
                 <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                    <Label Text="Crianças: " />
+                    <Label Text="Crianças: " TextColor ="white"/>
                     <Label Text="{Binding QntCriancas}" 
-                           TextColor="{StaticResource Primary}" />
+                           TextColor="#FFEF580C" />
                 </HorizontalStackLayout>
             </StackLayout>
         </Frame>
 
-        <Frame Margin="10">
+        <Frame Margin="10" BackgroundColor="#2CD3D3D3">
             <Grid ColumnDefinitions="*, *, *"
                   RowDefinitions="Auto, Auto">
-                <Label Grid.Row="0" Grid.Column="0" Text="Check-in:" />
-                <Label Grid.Row="0" Grid.Column="1" Text="Check-out:" />
-                <Label Grid.Row="0" Grid.Column="2" Text="Estadia:" />
+                <Label Grid.Row="0" Grid.Column="0" Text="Check-in:" TextColor ="white"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="Check-out:" TextColor ="white" />
+                <Label Grid.Row="0" Grid.Column="2" Text="Estadia:" TextColor ="white"/>
 
                 <Label Grid.Row="1" Grid.Column="0" 
                        Text="{Binding DataCheckIn, StringFormat='{}{0:dd/MM/yyyy}'}"
-                       TextColor="{StaticResource Primary}" />
+                       TextColor="#FFEF580C" />
 
                 <Label Grid.Row="1" Grid.Column="1" 
                        Text="{Binding DataCheckOut, StringFormat='{}{0:dd/MM/yyyy}'}"
-                       TextColor="{StaticResource Primary}" />
+                       TextColor="#FFEF580C" />
 
                 <Label Grid.Row="1" Grid.Column="2" 
                        Text="{Binding Estadia}"
-                       TextColor="{StaticResource Primary}"/>
+                       TextColor="#FFEF580C"/>
             </Grid>
         </Frame>
 
-        <Frame Margin="10">
+        <Frame Margin="10" BackgroundColor="#2CD3D3D3">
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                <Label Text="Valor Total: " />
+                <Label Text="Valor Total: " TextColor="White"/>
                 <Label Text="{Binding ValorTotal, StringFormat='{}{0:c}'} "
-                       TextColor="{StaticResource Primary}" />
+                       TextColor="#FFEF580C" />
             </HorizontalStackLayout>
         </Frame>
 
         <Button Text="Voltar"
+            BackgroundColor ="#FFEF580C"
                 HorizontalOptions="Center"
                 Clicked="Button_Clicked" />
 
